# Cypher-CLI-Tool

./: CMakeLists.txt  LICENSE  README.md
src/: cypher.c  cypher.h  main.c  utilities.c
